correct dark mode background

--- a/freedailymotivation/globals.css
+++ b/freedailymotivation/globals.css
@@ -3,26 +3,8 @@
 @tailwind utilities;
 
 @layer utilities {
-  .bg-gradient-dark {
-    background: linear-gradient(135deg, #000000, #1c1c1c, #000000);
-    background-size: 400% 400%;
-    animation: gradientAnimation 15s ease infinite;
-  }
-
   .shadow-dark {
     box-shadow: 0px 2px 5px rgba(255, 255, 255, 0.1);
-  }
-}
-
-@keyframes gradientAnimation {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
   }
 }
 
@@ -31,7 +13,5 @@
 }
 
 .dark body {
-  background: linear-gradient(135deg, #000000, #1c1c1c, #000000);
-  background-size: 400% 400%;
-  animation: gradientAnimation 15s ease infinite;
+  color: #f5f5f5;
 }
